# crypton-tool

./: .gitignore  Makefile  README.md  index.html  pyproject.toml
crypton_tool/: cli.py  crypton.py
docs/: mkdocs.yml
docs/docs/: cli.md  index.md  uso_básico.md
docs/site/: 404.html  index.html  sitemap.xml
docs/site/cli/: index.html
docs/site/search/: search_index.json
docs/site/uso_básico/: index.html
search/: search_index.json
tests/: decrypted_file_test  encrypted_file_test  test_crypton.py  token.crypton
