[tool.poetry]
name = "crypton-tool"
version = "0.1.0"
description = ""
authors = ["Marciel Barcellos <msbar2@gmail.com>"]
readme = "README.md"
packages = [{include = "crypton_tool"}]

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^38.0.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
